# bevy_physimple

./: .gitignore  .rustfmt.toml  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md
examples/: capsule.rs  convex.rs  nbody.rs  platformer.rs  shapes.rs  showcase.rs  simple.rs  stress_2d.rs
src/: broad.rs  coll_graph.rs  common.rs  dim2.rs  lib.rs  narrow.rs  normal_coll.rs  plugin.rs  settings.rs  transform_mode.rs
src/bodies/: kinematic.rs  mod.rs  raycast.rs  sensor.rs  staticbody.rs
src/physics_components/: angular_velocity.rs  mod.rs  physical_properties.rs  transform2d.rs  velocity.rs
src/shapes/: aabb.rs  capsule.rs  circle.rs  line.rs  mod.rs  obv.rs  raycast.rs  segment.rs  square.rs  triangle.rs
